--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,37 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>SurgeryCare</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1"
+  >
+  <link
+    rel="icon"
+    type="image/x-icon"
+    href="favicon.ico"
+  >
+  <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"
+  ></script>
+  <script
+    type="text/javascript"
+    src="https://js.stripe.com/v3/"
+  ></script>
+  <script
+    type="text/javascript"
+    src="assets/js/stripe.js"
+  ></script>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
