--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>SurgeryCare</title>
+
   <base href="/">
 
+  <!-- <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1  user-scalable=no"
+  > -->
   <meta
     name="viewport"
-    content="width=device-width, initial-scale=1"
-  >
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+  />
   <link
     rel="icon"
     type="image/x-icon"
